# home-assistant-config

./: .envrc  .gitignore  .markdownlint.yaml  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  .yamllint  CLAUDE.md  README.md  automations.yaml  configuration.yaml  docker-compose.yaml  justfile  pyproject.toml  repository.yaml  scenes.yaml  secrets.fake.yaml
.claude/: settings.json
.claude/commands/: commit-fast.md  commit.md  create-pull-request.md  disk-cleanup.md  release.md  speckit.tasks.md  troubleshoot.md  unifi-debug.md  zigbee-debug.md
.claude/rules/: area-patterns.md
.github/: pull_request_template.md
.github/workflows/: home-assistant.yml
.specify/memory/: constitution.md
.specify/templates/: spec-template.md
addons/flight-tracker/: Dockerfile  flight_tracker.py
dashboards/: energy.yaml  home-spa.yaml  phone.yaml  tablet.yaml
dashboards/phone/: away.yaml  energy.yaml  garage.yaml  home.yaml  rooms.yaml
dashboards/tablet/: appliances.yaml  climate.yaml  doorbell.yaml  energy.yaml  garage.yaml  home.yaml  media.yaml  outdoor.yaml  security.yaml  settings.yaml
docs/: stadler-form-noah-setup.md
flight-tracker/: Dockerfile  config.yaml  flight_tracker.py  fr24_client.py  processing.py  requirements.txt  run.py  run.sh
flight-tracker/scripts/: download_data.py
flight-tracker/static/: aircraft.json  airlines.json  airports.json  dashboard.html
home-spa/: README.md  deploy.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
home-spa/src/: main.ts  (+3 more)
knowledge/: INDEX.md
www/: voice-music-search-card.js
(+184 files in other folders)
