[project]
name = "home-assistant-config"
version = "1.0.0"
description = "Home Assistant configuration for smart home automation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "yamllint>=1.35.0",
    "detect-secrets>=1.5.0",
]
